v1 of my website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dreamer8</title>
-    <link href="./src/assets/favicon.ico" rel="icon" sizes="16x16">
+    <link href="./static/favicon.ico" rel="icon" sizes="16x16">
   </head>
   <body>
     <div id="app"></div>
